Enable Preview Features
Oopsies lol that's why templates weren't working